--- a/loja-app-duda/package.json
+++ b/loja-app-duda/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "loja-app",
+  "name": "loja-app-duda",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "next": "14.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4",
-    "postcss": "^8",
-    "sass": "^1.69.2",
-    "tailwindcss": "^3"
+    "eslint-config-next": "14.0.0"
   }
 }
